k8s/apps/dev/payment-app/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: payment-mongo
  namespace: payment-app
spec:
  serviceName: payment-mongo
  replicas: 1
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:5.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi




# If MongoDB is a StatefulSet (BEST PRACTICE)

# If you want MongoDB production-grade, use a StatefulSet.

# ✅ No standalone PVC needed here — Kubernetes creates one automatically.
